t/batch/directives/invalid/expected/002-sentinel-changed.pattern
ValueError: line 5: sentinel changed from '#FLUX:' to '#flux:'
